# Frontier-CS

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: sync-hf.yml  update_problem_count.yml  weekly-eval.yml
algorithmic/: README.md
algorithmic/problems/118/: config.yaml  interactor.cpp  statement.txt
algorithmic/problems/203/: config.yaml
algorithmic/problems/209/: config.yaml  interactor.cc  statement.txt
algorithmic/problems/231/: config.yaml  interactor.cc
research/: README.md
research/problems/agentic_rl_discovery/resources/: Dockerfile  baseline_gigpo.py  baseline_grpo.py  environment.yml  pyproject.toml  run_training.sh  solution_loader.py  submission_spec.json
research/problems/agentic_rl_discovery/resources/verl-agent/verl/trainer/: main_ppo.py
research/problems/agentic_rl_discovery/resources/verl-agent/verl/trainer/ppo/: core_algos.py  ray_trainer.py
research/problems/agentic_rl_discovery/resources/verl-agent/verl/utils/: torch_functional.py
research/problems/agentic_rl_discovery/resources/verl-agent/verl/workers/: fsdp_workers.py
research/problems/agentic_rl_discovery/resources/verl-agent/verl/workers/actor/: dp_actor.py
research/problems/quant_dot_int4/resources/: benchmark.py  pyproject.toml  quant_dot_baseline.py  submission_spec.json
research/scripts/: generate_solutions.py  generate_solutions.sh  problems.txt
scripts/: README_TRACKER.md  compute_elo.py  export_hf_dataset.py  run_eval.sh  update_problem_count.py
src/frontier_cs/: cli.py  evaluator.py
(+3019 files in other folders)
